# sopilot

./: .dockerignore  .env.example  .env.poc.example  .gitignore  .pre-commit-config.yaml  ACCOMPLISHMENTS.md  ACHIEVEMENT_SUMMARY.md  ARCHITECTURE.md  AUTONOMOUS_WORK_PLAN.md  CHANGELOG.md  COMMERCIALIZATION_PLAN.md  COMMERCIALIZATION_PROGRESS.md  COMMERCIAL_PIPELINE_READY.md  COMMERCIAL_READINESS_2026-02-15.md  COMMERCIAL_READY_FINAL.md  COMMERCIAL_STATUS.md  DEMO.md  DEMO_PACK_READY.md  DRESS_REHEARSAL_COMPLETE.md  Dockerfile  EVALUATION.md  EVALUATION_BUG_CRITICAL.md  EXECUTION_STATUS.md  FINAL_SESSION_REPORT.md  FOLLOWUP_EMAIL_WEEK1.md  GT_CREATION_WORKFLOW.md  INSURANCE_DOMAIN_IMPLEMENTATION.md  INSURANCE_MVP_ROADMAP.md  INSURANCE_PITCH.md  INSURANCE_ROI_CALCULATOR.md  ISSUES.md  LICENSE  MANUFACTURING_V1_BENCHMARK.md  MANUFACTURING_V1_DELIVERY.md  MANUFACTURING_V1_IMPLEMENTATION_SUMMARY.md  MANUFACTURING_V1_README_QUICK_START.md  MEETING_PREP_GUIDE.md  MIGRATION.md  OPERATIONAL_CHECKLIST.md  P0_COMPLETE_SUMMARY.md  (+63 more)
.githooks/: pre-commit
benchmarks/: README.md  benchmark_dtw.py  benchmark_embeddings.py  benchmark_end_to_end.py  manufacturing_paths.json  manufacturing_v1.jsonl  manufacturing_v1.jsonl.template  real_v1.jsonl  real_v2.jsonl  smoke_benchmark.jsonl  video_paths.local.json.example  vigil_benchmark_v1.jsonl
demo/: DEMO_GUIDE.md  index.html  live.html
demo_outputs/: ablation_summary.json  training_summary.json
docker/: .dockerignore  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.poc
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT_GUIDE.md  GPU_INFERENCE_GUIDE.md  PHASE1_P0_VLM_FIXES.md  POC_RUNBOOK_JA.md  RESEARCH_BACKGROUND.md  TIMEOUT_PROTECTION.md  TROUBLESHOOTING.md  equipment_maintenance_demo_plan.md  evaluation_labels_template.json  field_capture_guide.md  implementation_notes.md  infosec_quickpack.md  next_steps.md  offline_deploy.md  onprem_runbook.md  paid_poc_package_template.md  poc_capture_guide.md  rbac_and_audit_export.md  research_contribution.md  roadmap_90_days.md  task_definition_sheet_template.md
experiments/: insurance_experiments.json
insurance_mvp/: API_IMPLEMENTATION_SUMMARY.md  PIPELINE_GUIDE.md  PIPELINE_IMPLEMENTATION_SUMMARY.md  PIPELINE_README.md  QUICKSTART_WEB_UI.md  QUICK_START_TESTING.md  README.md  TESTING_PLAN.md  WEB_UI_INTEGRATION.md  WEB_UI_SUMMARY.md  __init__.py  config.example.yaml  config.py  dashboard.py  demo_pipeline.py  exceptions.py  logging_config.py  metrics.py  pipeline.py  pyproject.toml  report_generator.py  serialization.py
insurance_mvp/api/: MOUNT_WEB_UI.md  QUICKSTART.md  README.md  SETUP.md  __init__.py  auth.py  background.py  database.py  example_client.py  main.py  models.py  web_routes.py
insurance_mvp/conformal/: adaptive.py  split_conformal.py
insurance_mvp/cosmos/: DELIVERABLES.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  __init__.py  client.py  demo.py  example_usage.py  prompt.py  prompt_registry.py  schema.py
insurance_mvp/demo_assets/: real_benchmark_rtx5090.json
insurance_mvp/evaluation/: __init__.py  baselines.py  experiment.py  sensitivity.py  statistical.py
insurance_mvp/insurance/: README.md  __init__.py  fault_assessment.py  fraud_detection.py  schema.py  utils.py
insurance_mvp/mining/: IMPLEMENTATION_NOTES.md  README.md  __init__.py  audio.py  clip_extractor.py  fuse.py  motion.py  proximity.py
insurance_mvp/pipeline/: __init__.py  __main__.py  cli.py  orchestrator.py  protocols.py  report.py  results.py
insurance_mvp/pipeline/adapters/: __init__.py  vlm_adapter.py
insurance_mvp/pipeline/stages/: conformal_stage.py  mining.py  ranking.py  recalibration.py  review_priority.py  severity_model.py  vlm_inference.py
insurance_mvp/scripts/: demo_mining_pipeline.py
insurance_mvp/templates/: README.md  base.html  metrics.html  multi_clip_report.html  professional_report.html  queue.html  review.html  upload.html
insurance_mvp/testing/: __init__.py  mock_vlm.py
insurance_mvp/tests/: conftest.py  test_adaptive_conformal.py  test_api_basic.py  test_background_worker.py  test_clip_extractor.py  test_conformal.py  test_cosmos_client.py  test_cosmos_client_extended.py  test_e2e_pipeline.py  test_exceptions.py  test_experiment_tracking.py  test_fault_assessment_extended.py  test_fraud_detection_extended.py  test_insurance_domain.py  test_insurance_utils.py  test_logging_config.py  test_metrics.py  test_mining_pipeline.py  test_pipeline.py  test_prompt_improvements.py  test_prompt_registry.py  test_protocols.py  test_recalibration.py  test_report_generator.py  test_schema_validation.py  test_serialization.py  test_severity_model.py  test_signal_fuser.py  test_stage_composition.py  test_statistical_eval.py  test_vlm_accuracy.py
k8s/: README.md  configmap.yaml  deployment-api.yaml  deployment-worker-cpu.yaml  deployment-worker-gpu.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml  statefulset-redis.yaml
migrations/: env.py
monitoring/: README.md  docker-compose.monitoring.yml  grafana-dashboard.json  prometheus-rules.yaml  prometheus.yml
nginx/: nginx.conf
pilot_demo_reports/: 01_oil_change_oil_change_gold.json  02_oil_change_oil_change_trainee_1.json  03_oil_change_oil_change_trainee_2.json  04_oil_change_oil_change_trainee_3.json  05_brake_pads_brake_pads_gold.json  06_brake_pads_brake_pads_trainee_1.json  07_brake_pads_brake_pads_trainee_2.json  08_ppe_check_ppe_check_gold.json  09_ppe_check_ppe_check_trainee_1.json  10_ppe_check_ppe_check_trainee_2.json
results/: alpha_sweep_vit_h14.json  real_v2_evaluation.json  real_v2_summary.md  v2_hierarchical_hybrid.json  vit_h14_evaluation.json
sales/: outreach_tracker.csv
scripts/: __init__.py  analyze_critical_fp.py  autopilot_common.py  autopilot_status.py  backup_db.sh  backup_onprem.py  batch_process.py  benchmark_eval.py  benchmark_vigil.py  build_evidence_dossier.py  build_sales_pack.py  bulk_upload_folder.py  convert_labels.py  create_qdrant_collections.py  demo_ablation_study.py  demo_closed_loop.py  demo_e2e_pipeline.py  (+95 more)
(+381 files in other folders)
