[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sopilot"
version = "0.1.0"
description = "On-prem SOP video evaluation MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "numpy>=1.26.0",
  "opencv-python-headless>=4.10.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.0",
  "reportlab>=4.2.0",
  "redis>=5.0.0",
  "rq>=1.16.2",
  "structlog>=25.0.0",
  "prometheus-client>=0.20.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0",
  "pre-commit>=3.7.0",
]
ml = [
  "torch>=2.4.0",
  "timm>=1.0.0",
  "einops>=0.8.0"
]
gpu = [
  "cupy-cuda12x>=13.0.0"
]
vigil = [
  "psycopg2-binary>=2.9.9",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "qdrant-client>=1.7.0",
  "scenedetect[opencv]>=0.6.3",
  "open-clip-torch>=2.24.0",
  "pillow>=10.0.0",
  "transformers>=4.51.3",  # Qwen2.5-VL requires 4.51+ for proper model doc
  "qwen-vl-utils[decord]>=0.0.10",  # Video kwargs stability (return_video_kwargs)
  "torch>=2.4.0",
  "accelerate>=0.34.0",
]
whisper = [
  "openai-whisper>=20231117",
]
insurance = [
  "sqlalchemy>=2.0.0",
  "jinja2>=3.1.0",
  "pyyaml>=6.0.0",
  "tqdm>=4.66.0",
  "scipy>=1.11.0",
  "ultralytics>=8.1.0",
]
dashboard = [
  "streamlit>=1.30.0",
]

[project.scripts]
sopilot-api = "sopilot.main:run"
sopilot-worker = "sopilot.worker:run"
sopilot-watch = "sopilot.watch_folder:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sopilot = ["ui/*.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests", "scripts", "insurance_mvp"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
  "E501",    # line too long (handled by formatter)
  "E701",    # multiple statements on one line
  "SIM108",  # ternary operator (readability preference)
  "SIM117",  # multiple-with-statements
  "B017",    # assert-raises-exception in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841", "B007", "B008"]
"scripts/*" = ["F841"]
"src/*" = ["F841", "B008", "SIM102", "SIM103"]
"insurance_mvp/*" = ["F841", "B008", "SIM102", "SIM103"]
"insurance_mvp/tests/*" = ["F841", "B007", "B008"]
