[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sopilot"
version = "1.1.0"
description = "On-prem SOP evaluation service powered by video embeddings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "uvicorn[standard]>=0.30.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "opencv-python-headless>=4.10.0.84",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "jinja2>=3.1.0",
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
vjepa2 = [
    "torch>=2.7.0",
    "timm>=1.0.11",
    "einops>=0.8.0",
]
speed = [
    "numba>=0.59.0",
]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.28.0",
    "mypy>=1.10.0",
]
research = [
    "torch>=2.7.0",
    "timm>=1.0.11",
    "einops>=0.8.0",
    "numba>=0.59.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"sopilot/api/routes.py" = ["B008"]
"tests/test_autopilot_scripts.py" = ["SIM117"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["sopilot*"]

[tool.setuptools.package-data]
sopilot = ["ui/*.html", "core/templates/*.html"]
