[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-mvp"
version = "0.1.0"
description = "Insurance claim video review automation system"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.0.0",
    "transformers>=4.35.0",
    "qwen-vl-utils>=0.0.1",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
all = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "openai-whisper>=20231117",
]

[tool.setuptools]
packages = ["insurance_mvp"]
